kustomize/base/obdemo-rcs-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rcs-api
spec:
  ports:
  - name: http
    port: 8083
    protocol: TCP
    targetPort: 8083
  selector:
    app: rcs-api
  type: ClusterIP
